k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forecast
spec:
  replicas: 2
  selector:
    matchLabels:
      app: forecast
  template:
    metadata:
      labels:
        app: forecast
    spec:
      containers:
        - name: forecast
          image: viktor328/pythonweatherforecastapp:dev
          ports:
            - containerPort: 8080
