k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forecast-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  selector:
    app: forecast
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
